--- a/ref.bib
+++ b/ref.bib
@@ -92,3 +92,38 @@
 	url = {https://doi.org/10.7717/peerj-cs.103},
 	doi = {10.7717/peerj-cs.103},
 }
+
+
+@inproceedings{wang2021central,
+  title={Central moment analysis for cost accumulators in probabilistic programs},
+  author={Wang, Di and Hoffmann, Jan and Reps, Thomas},
+  booktitle={Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
+  pages={559--573},
+  year={2021}
+}
+
+@inproceedings{assert,
+	author = {Wang, Jinyi and Sun, Yican and Fu, Hongfei and Chatterjee,
+	          Krishnendu and Goharshady, Amir Kafshdar},
+	title = {Quantitative analysis of assertion violations in probabilistic
+	         programs},
+	year = {2021},
+	isbn = {9781450383912},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	doi = {10.1145/3453483.3454102},
+	booktitle = {Proceedings of the 42nd ACM SIGPLAN International Conference on
+	             Programming Language Design and Implementation},
+	pages = {1171–1186},
+	numpages = {16},
+	location = {Virtual, Canada},
+	series = {PLDI 2021},
+}
+@inproceedings{probana,
+	title = {Probabilistic program analysis with martingales},
+	author = {{Chakarov, Aleksandar} and {Sankaranarayanan, Sriram}},
+	booktitle = {Computer Aided Verification: 25th International Conference},
+	pages = {511--526},
+	year = {2013},
+	organization = {Springer},
+}
