--- a/ref.bib
+++ b/ref.bib
@@ -127,3 +127,12 @@
 	year = {2013},
 	organization = {Springer},
 }
+
+@inproceedings{kozen1979semantics,
+  title={Semantics of probabilistic programs},
+  author={Kozen, Dexter},
+  booktitle={20th Annual Symposium on Foundations of Computer Science (sfcs 1979)},
+  pages={101--114},
+  year={1979},
+  organization={IEEE}
+}
